# quantum-emotion-classifier

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/: README.md  generate_datasets.py
experiments/: instant_qubit_chart.py  optimized_quantum_training.py  qiskit_backend_experiment.py  qiskit_rl_demo.py  qiskit_rl_training.py  qiskit_vs_classical_comparison.py  quantum_dimensional_analysis.py  quantum_feature_compression_20q.py  quantum_rl_analysis.py  quantum_rl_benchmark.py  quantum_vs_classical_rl.py  quantum_vs_classical_speed.py  qubit_scaling_performance.py  quick_quantum_training.py  quick_qubit_scaling.py  simple_quantum_rl_demo.py
src/quantum_emotion/: __init__.py  classifier.py  encoding.py  hybrid.py  kernels.py  qiskit_classifier.py  qiskit_core.py  quantum_rl.py  utils.py
src/quantum_rl/: qiskit_space_invaders.py  qiskit_verification.py
tests/: __init__.py  conftest.py  test_circuits.py  test_classification.py  test_gradients.py  test_qiskit_classifier.py
