[project]
name = "quantum-emotion-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium>=1.2.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pennylane>=0.42.3",
    "pennylane-qiskit>=0.36.0",
    "psutil>=7.1.0",
    "qiskit>=2.2.0",
    "qiskit-aer>=0.17.2",
    "qiskit-algorithms>=0.4.0",
    "qiskit-ibm-runtime>=0.41.1",
    "qiskit-machine-learning>=0.8.2",
    "qiskit-optimization>=0.7.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision",
]

[project.optional-dependencies]
pennylane-qiskit = [
    "pennylane-cirq>=0.42.0",
]
jupyter = [
    "ipywidgets>=8.1.7",
    "plotly>=6.3.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]
